--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "observ": "~0.2.0",
     "observ-increment": "~1.0.0",
     "observ-struct": "~6.0.0",
+    "smallest": "~1.0.0",
     "xtend": "~4.0.0"
   }
 }
