--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "geval": "~2.1.1",
     "observ": "~0.2.0",
     "observ-increment": "~1.0.0",
+    "observ-value": "~1.0.0",
     "smallest": "~1.0.0",
+    "value-pipe": "~1.0.0",
     "xtend": "~4.0.0"
   }
 }
